add limits to fetch and save operations (#10)
* add limits to fetch and save operations

* reduce max entries logging to debug level